@@ -5,20 +5,26 @@ use warnings;
 use Test::More;
 use Statistics::R;
 
-# Test that the IOs are well-oiled. In Statistics::R version 0.20, a slight
-# imprecision in the regular expression to parse the output stream caused a
-# problem that was apparent only once every few thousands times
 
 my ($R, $input);
 
 ok $R = Statistics::R->new();
 
-ok $R->set('x', $input);
 
+# Test that large arrays can be read
+ok $R->set('x', [1 .. 100_000]), 'Large arrays';
+is $R->get('x')->[-1], 100_000;
+
+
+# Test that the IOs are well-oiled. In Statistics::R version 0.20, a slight
+# imprecision in the regular expression to parse the output stream caused a
+# problem that was apparent only once every few thousands times
+ok $R->set('x', $input), 'Smooth IO';
 for my $i (1 .. 10_000) {
-   is($R->get('x'), undef);
+   is $R->get('x'), undef;
 }
 
 ok $R->stop();
+
 
 done_testing;
